# portfolio-generator

./: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: handlers.rs  main.rs  models.rs
src-tauri/static/: build.css
src-tauri/templates/: portfolio.html
src/components/: Sidebar.tsx  TopNavbar.tsx
static/: output.css
